--- a/Lockit.Web/Lockit.Web.csproj
+++ b/Lockit.Web/Lockit.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Lockit.Data\Lockit.Data.csproj" />
+    <ProjectReference Include="..\Lockit.Models\Lockit.Models.csproj" />
   </ItemGroup>
 
 </Project>
