--- a/Lockit.Web/Lockit.Web.csproj
+++ b/Lockit.Web/Lockit.Web.csproj
@@ -1,10 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Blazicons.FlagIcons" Version="1.2.9" />
+    <PackageReference Include="MudBlazor" Version="8.11.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Lockit.Data\Lockit.Data.csproj" />
