--- a/Lockit.Web/Lockit.Web.csproj
+++ b/Lockit.Web/Lockit.Web.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazicons.FlagIcons" Version="1.2.9" />
+    <PackageReference Include="EasyCsv" Version="2.0.1" />
     <PackageReference Include="MudBlazor" Version="8.11.0" />
   </ItemGroup>
 
