--- a/Lockit.Web/Lockit.Web.csproj
+++ b/Lockit.Web/Lockit.Web.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Blazicons.FlagIcons" Version="1.2.9" />
     <PackageReference Include="EasyCsv" Version="2.0.1" />
+    <PackageReference Include="EasyCsv.Components" Version="2.0.1" />
     <PackageReference Include="MudBlazor" Version="8.11.0" />
   </ItemGroup>
 
